# pg_temporal

./: .gitignore  Cargo.toml  DevLog.md  LICENSE  README.md  Spec.md  build.rs  pg_temporal.control  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
benchmarking/: RESULTS.md  benchmarking.md  tz_lookup.rs
benchmarking/sql/: 01_microbench.sql  02a_table_setup.sql  02b_table_queries.sql  bench_insert_mixed.pgbench  bench_insert_uniform.pgbench
docs/: DevLog.md  Spec.md  contributing.md  quickstart.md  roadmap.md  storage_redesign.md
docs/usage/: duration.md  instant.md  plain_date.md  plain_datetime.md  plain_month_day.md  plain_time.md  plain_year_month.md  zoned_datetime.md
src/: cal_index.rs  catalog.rs  gucs.rs  gucs_tests.rs  lib.rs  now.rs  provider.rs  tz_canonical_list.txt  tz_index.rs
src/types/: catalog.rs  mod.rs
src/types/duration/: mod.rs  tests.rs
src/types/instant/: mod.rs  tests.rs
src/types/plain_date/: mod.rs  tests.rs
src/types/plain_datetime/: mod.rs  tests.rs
src/types/plain_month_day/: mod.rs  tests.rs
src/types/plain_time/: mod.rs  tests.rs
src/types/plain_year_month/: mod.rs  tests.rs
src/types/zoned_datetime/: mod.rs  tests.rs
