[package]
name = "pg_temporal"
version = "0.0.1"
edition = "2024"
description = "Temporal-compliant date/time types for PostgreSQL"
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = { version = "0.18.0", default-features = false }
temporal_rs = { version = "0.2.3", default-features = false, features = [
    "compiled_data",
] }
timezone_provider = "0.2.3"

[build-dependencies]
timezone_provider = "0.2.3"
zerovec = { version = "0.11.6", features = ["derive"] }
zerotrie = "0.2.4"

[dev-dependencies]
pgrx-tests = "0.18.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tz_lookup"
path = "benchmarking/tz_lookup.rs"
harness = false

[package.metadata.bin]
cargo-pgrx = { version = "0.18.0", locked = true }

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Pre-release project; these cargo metadata fields aren't meaningful yet.
cargo_common_metadata = "allow"
# Transitive dependency version conflicts we don't control.
multiple_crate_versions = "allow"
